# Rabbit-Hole-OS

./: .actrc  .dockerignore  .gitignore  .pyre_configuration  .secrets.example  CHANGELOG.md  CI.md  CI_CD_Architecture.md  README.md  Research Synthesis Architecture.md  docker-compose.yml  git-analysis-report-utf8.json  git-analysis-report.json  package-lock.json  package.json  pr_description_web_redesign.md  production_deployment_playbook.md  render.yaml  turbo.json  verify_engine.py  verify_synthesis.py  verify_synthesis_prompt.py  walkthrough.md  walkthrough_web_redesign.md
apps/backend/: AGENTS.md  Dockerfile  NODES.md  drop_tables.py  init_db.py  list_users.py  migrate_edges.py  pyproject.toml  rabbit-hole-backend.spec  requirements.txt  run_server.py  run_worker.py  schema_check.txt  verify_schema.py  view_recent_logs.py
apps/backend/app/: main.py
apps/backend/app/api/: router.py
apps/backend/app/core/: config.py  database.py  hashing.py  jwt.py  redis_client.py
apps/backend/app/models/: __init__.py  edge.py  job.py  node.py  session.py  user.py  whiteboard.py
apps/backend/app/schemas/: chat.py  edge.py  node.py
apps/backend/app/services/: agents.py  ast_to_latex.py  chart_renderer.py  chunk_service.py  document_ast.py  dummy_data.py  embeddings.py  geo_service.py  graph_agent.py  latex_service.py  llm.py  oauth_service.py  orchestrator.py  outline.py  scraper.py  storage.py  versioning.py
apps/backend/app/workers/: synthesis_worker.py
apps/backend/migrations/versions/: 001_create_users_and_sessions.py
apps/backend/storage/: edges.json  nodes.json
(+300 files in other folders)
