[project]
name = "rabbit-hole-backend"
version = "0.1.0"
description = "Backend for RabbitHole OS"
authors = [
    {name = "Your Name", email = "you@example.com"},
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "pydantic>=2.0",
    "pydantic-settings",
    "alembic",
    "asyncpg",
    "pgvector",
    "python-multipart",
    "trafilatura",
    "langchain"
]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
